# SHA1

./: CMakeLists.txt  FileParser.cpp  FileParser.hpp  MessageDigestCalculator.cpp  MessageDigestCalculator.hpp  README.md  TestFileParser.cpp  TestMessageDigestCalculator.cpp  download-ext  main.cpp
.github/workflows/: main.yml
